force-app/main/default/objects/BGCM__di_Binding__mdt/fields/BGCM__BindingObject__c.field-meta.xml
<CustomField>
    <fullName>BGCM__BindingObject__c</fullName>
    <label>Binding Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Bindings</relationshipLabel>
    <relationshipName>Bindings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>