force-app/main/default/objects/BGCM__di_Binding__mdt/fields/BGCM__BindingObjectAlternate__c.field-meta.xml
<CustomField>
    <fullName>BGCM__BindingObjectAlternate__c</fullName>
    <description>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</description>
    <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</inlineHelpText>
    <label>Binding Object Alternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>