force-app/main/default/objects/BGCM__di_Binding__mdt/fields/BGCM__BindingSequence__c.field-meta.xml
<CustomField>
    <fullName>BGCM__BindingSequence__c</fullName>
    <label>Binding Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>