force-app/main/default/objects/BGCM__di_Binding__mdt/fields/BGCM__To__c.field-meta.xml
<CustomField>
    <fullName>BGCM__To__c</fullName>
    <label>To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>