force-app/main/default/objects/BGCM__di_Binding__mdt/validationRules/BGCM__BindObj_Or_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>BGCM__BindObj_Or_BindObjAlt</fullName>
    <active>true</active>
    <description>This validation rule ensures that only the &quot;Binding Object&quot; or the &quot;Binding Object Alternate&quot; field is specified and not both.</description>
    <errorConditionFormula>NOT( ISBLANK( BGCM__BindingObject__c ) ) &amp;&amp; NOT( ISBLANK( BGCM__BindingObjectAlternate__c ) )</errorConditionFormula>
    <errorMessage>Only specify the &quot;Binding Object&quot; field or the &quot;Binding Object Alternate&quot; field; not both.</errorMessage>
</ValidationRule>