force-app/main/default/objects/BGCM__di_Binding__mdt/listViews/BGCM__All.listView-meta.xml
<ListView>
    <fullName>BGCM__All</fullName>
    <columns>MasterLabel</columns>
    <columns>BGCM__BindingObject__c</columns>
    <columns>BGCM__BindingObjectAlternate__c</columns>
    <columns>BGCM__BindingSequence__c</columns>
    <columns>BGCM__To__c</columns>
    <columns>BGCM__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>